<?xml version="1.0" encoding="utf-8"?>
<!--
  dialog_info.xml
  JDGSoundboard

  Copyright (c) 2019 Vincent Lammin
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:scaleType="center"
            android:src="@drawable/ic_launcher"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/app_ver"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/app_ver"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/app_author"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="@color/grey_light"/>

            <TextView
                android:id="@+id/app_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_date"
                android:textColor="@color/grey_light"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>